--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,40 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+#light {
+  background-color: white;
+}
+
+#dark {
+  background-color: black;
+}
+
+#light .main {
+  background-color: white;
+}
+
+#dark .main {
+  background-color: black;
+}
+
+#light .switeh {
+  color: black;
+}
+
+#dark .switeh {
+  color: white;
+}
+
+#light .switeh text {
+  color: black;
+}
+
+#dark .switeh text {
+  color: rgb(241, 236, 236);
 }
